test/files/neg/unchecked3.check
unchecked3.scala:24: error: non-variable type argument Double in type pattern E1[Double] is unchecked since it is eliminated by erasure
  /*   warn */ def peerTypes2(x: B1[Int]) = x match { case _: E1[Double] => true }
                                                              ^
unchecked3.scala:25: error: non-variable type argument Double in type pattern F1[Double] is unchecked since it is eliminated by erasure
  /*   warn */ def peerTypes3(x: B1[_]) = x match { case _: F1[Double] => true }
                                                            ^
unchecked3.scala:28: error: non-variable type argument Int in type pattern A2[Int] is unchecked since it is eliminated by erasure
  /*   warn */ def twotypes1[T](x: B2[T, Int]) = x match { case _: A2[Int] => true }
                                                                   ^
unchecked3.scala:32: error: non-variable type argument Int in type pattern B2[_,Int] is unchecked since it is eliminated by erasure
  /*   warn */ def twotypes5[T](x: A2[T]) = x match { case _: B2[_, Int] => true }
                                                              ^
four errors found
